feat: add dirs and eslint, prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/"
   ]
 }
