--- a/package.json
+++ b/package.json
@@ -46,6 +46,17 @@
     ]
   },
   "devDependencies": {
-    "gltf-loader-ts": "^0.3.1"
+    "gltf-loader-ts": "^0.3.1",
+    "@babel/core": "^7.17.10",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2"
   }
 }
