--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^9.54.2",
     "@react-three/fiber": "^8.10.1",
+    "@react-three/gltfjsx": "^4.3.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -46,9 +47,8 @@
     ]
   },
   "devDependencies": {
-    "gltf-loader-ts": "^0.3.1",
     "@babel/core": "^7.17.10",
-    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.22.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -57,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gltf-loader-ts": "^0.3.1",
     "prettier": "^2.6.2"
   }
 }
