--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-three/drei": "^9.54.2",
     "@react-three/fiber": "^8.10.1",
     "@react-three/gltfjsx": "^4.3.4",
+    "@react-three/postprocessing": "^2.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
