--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,6 @@
   },
   "extends": [
     "plugin:react/recommended",
-    "plugin:typescript-eslint/recommended",
     "airbnb",
     "prettier",
     "plugin:react/jsx-runtime"
@@ -26,8 +25,20 @@
     "no-unused-vars": "off",
     "no-plusplus": 0,
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "off",
+    "no-unsafe-optional-chaining": "off",
+    "react/jsx-boolean-value": 0,
+    "react/no-array-index-key": 0,
+    "react/jsx-no-useless-fragment": 0,
+    "arrow-body-style": 0,
+    "prefer-destructuring": 0,
+    "no-multi-assign": 0,
+    "react/jsx-curly-brace-presence": 0,
+    "spaced-comment": 0,
+    "no-undef": 0,
+    "no-nested-ternary": 0,
     "react/jsx-props-no-spreading": "off",
+    "react/no-unknown-property": [0],
     "react/jsx-filename-extension": [
       1,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
