feat: add audio main theme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,9 @@
     "arrow-body-style": 0,
     "prefer-destructuring": 0,
     "no-multi-assign": 0,
+    "react/button-has-type": 0,
+    "no-return-await": 0,
+    "no-else-return": 0,
     "react/jsx-curly-brace-presence": 0,
     "spaced-comment": 0,
     "no-undef": 0,
